// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fail should log the fail message with multiple artifacts 1`] = `
Array [
  Array [
    "Failed to upload artifact(s): ./some-path-again and some-artifact.",
  ],
]
`;

exports[`fail should log the fail message with single artifact 1`] = `
Array [
  Array [
    "Failed to upload artifact(s): ./some-path.",
  ],
]
`;
